fix: adjust layout and spacing in Clients, Fleet, Vehicles, Header, and Services components for improved responsiveness and alignment

--- a/src/components/Clients/Clients.css
+++ b/src/components/Clients/Clients.css
@@ -56,6 +56,7 @@
         flex-direction: column;
         align-items: center;
         margin: 0;
+        margin-bottom: 50px;
     }
 
     .clients-section-title {
@@ -64,11 +65,20 @@
 
     .clients-section-carousel {
         width: 100%;
+        margin-left: 0;  /* Remove left margin */
+        display: flex;
+        justify-content: center;
+    }
+
+    .image-container-carousel {
+        display: flex;
+        justify-content: center;
+        width: 100%;
     }
 
     .image-carousel {
         height: 300px;
         width: auto;
-        transform: translateX(25%);
+        margin: 20px auto;  
     }
 }
