--- a/src/layouts/Header/header.css
+++ b/src/layouts/Header/header.css
@@ -35,22 +35,28 @@
 
 @media screen and (max-width: 600px) {
     .header {
-        position: sticky;
-        top: 0; 
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
         height: 80px;
-        animation: adjust-header linear both;
-        animation-timeline: scroll();
-        animation-range: 0 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: white;
+        transition: all 0.3s ease;
+        z-index: 100;
     }
 
     @keyframes adjust-header {
         to {
             background-color: rgba(216, 216, 216, 0.448);
             height: 50px;
-            width: 50%;
+            width: 80%;
             border-radius: 8px;
             top: 10px;
-            transform: translateX(50%);
+            left: 50%;
+            transform: translateX(-50%);
         }
     }
 
@@ -59,7 +65,4 @@
         align-items: center;
         justify-content: center;
     }
-
-
-
 }
