--- a/src/layouts/Servicies/servicies.css
+++ b/src/layouts/Servicies/servicies.css
@@ -95,6 +95,8 @@
     .services-group {
         display: flex;
         flex-flow: row wrap;
+        align-items: center;
+        justify-content: center;
     }
 
     .service-container {
